<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/main"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/inputMargin"
        >
        <!--   title     -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmiTitle"
                android:textSize="@dimen/titleSize"
                android:layout_marginBottom="@dimen/inputMargin"
                android:fontFamily="@font/dnf_bit"
                android:layout_marginRight="@dimen/inputMargin"
                />

            <ImageButton
                android:id="@+id/btnGoToSearch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/inputMargin"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/meal"
                />
        </LinearLayout>
        <!-- 성명   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputHeight"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/name"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:text="@string/userName"
                android:textSize="@dimen/inputTextSize" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/hintName"
                android:gravity="center_vertical"
                android:textSize="@dimen/inputTextSize"
                android:inputType="text"

                />
        </LinearLayout>
        <!-- 체중   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputHeight"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/inputMargin"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/ruler"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:text="@string/userHeight"
                android:textSize="@dimen/inputTextSize"
                />

            <EditText
                android:id="@+id/inputHeight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/hintHeight"
                android:gravity="center_vertical"
                android:textSize="@dimen/inputTextSize"
                android:inputType="numberDecimal"
                />
        </LinearLayout>
        <!-- 신장   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputHeight"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/inputMargin"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/weight"
                android:scaleType="centerInside"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:text="@string/userWeight"
                android:textSize="@dimen/inputTextSize"
                />

            <EditText
                android:id="@+id/inputWeight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/hintWeight"
                android:gravity="center_vertical"
                android:textSize="@dimen/inputTextSize"
                android:inputType="numberDecimal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/btnCal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/btnSideMargin"
                android:layout_marginRight="@dimen/btnSideMargin"
                android:layout_marginBottom="@dimen/inputMargin"
                android:backgroundTint="@color/green"
                android:letterSpacing="0.5"
                android:text="@string/btnCal"
                android:textSize="@dimen/btnTextSize"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/btnSideMargin"
                android:layout_marginRight="@dimen/btnSideMargin"
                android:backgroundTint="@android:color/transparent"
                android:letterSpacing="0.5"
                android:text="@string/btnReset"
                android:textColor="@color/red"
                android:textSize="@dimen/btnTextSize"
                android:textStyle="bold"
                app:strokeColor="@color/red"
                app:strokeWidth="3dp"
                />
        </LinearLayout>
        <!--   설명 / 이미지 출력층    -->
        <LinearLayout
            android:id="@+id/resultLayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/inputMargin"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/textResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inputMargin"
                android:background="@drawable/textborder"
                android:text=""
                android:padding="@dimen/inputMargin"
                android:gravity="center"
                android:lineSpacingExtra="6dp"
                />

            <ImageView
                android:id="@+id/imageResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/inputMargin"
                android:scaleType="fitCenter"/>
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_rawRes="@raw/running"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="visible"
            android:layout_gravity="center"
            />
    </LinearLayout>




</LinearLayout>